# jornada-milhas

./: .env.sample  .pre-commit-config.yaml  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
jornada_milhas/: asgi.py  conftest.py  settings.py  urls.py  wsgi.py
jornada_milhas/accounts/: admin.py  apps.py  models.py
jornada_milhas/accounts/migrations/: 0001_initial.py
jornada_milhas/accounts/tests/: test_user_model.py
jornada_milhas/core/: admin.py  apps.py  models.py  serialiazer.py  serializer.py  urls.py  views.py
jornada_milhas/core/migrations/: 0001_initial.py  0002_alter_post_options.py  0003_destination.py
jornada_milhas/core/tests/: conftest.py  test_destination_serializer.py  test_destino_model.py  test_model.py  test_ok.py  test_post_serializer.py
jornada_milhas/core/tests/api/: test_create.py  test_depoimento_home.py  test_list.py
jornada_milhas/core/tests/api/destination_crud/: test_create.py  test_delete.py  test_list.py  test_patch.py  test_put.py  test_read.py
jornada_milhas/core/tests/api/post_crud/: test_create.py  test_delete.py  test_list.py  test_patch.py  test_put.py  test_read.py
jornada_milhas/core/tests/model/: test_destination.py  test_post.py
jornada_milhas/core/tests/serializer/: test_destination.py  test_post.py
jornada_milhas/core/views/: __init__.py  destination.py
